changed img src to gcs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
               <div class="subme">Developer</div>
             </div>
             <div class="kotak-img">
-              <img src="./img/sharin.png" alt="" />
+              <img
+                src="https://storage.googleapis.com/img-sharina/sharin.png"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -100,7 +103,9 @@
               <div class="p-bawah">
                 <div class="item ui">
                   <div class="gambar">
-                    <img class="pict" src="./img/Dashboard.png" alt="" />
+                    <img class="pict"
+                    src="https://storage.googleapis.com/img-sharina/Dashboard.png"
+                    alt=""
                   </div>
                   <div class="tulisan">
                     <p class="judul-item">UI UX</p>
@@ -110,7 +115,11 @@
 
                 <div class="item ilustrasi">
                   <div class="gambar">
-                    <img class="pict" src="./img/ilustrasi.jpeg" alt="" />
+                    <img
+                      class="pict"
+                      src="https://storage.googleapis.com/img-sharina/ilustrasi.jpeg"
+                      alt=""
+                    />
                   </div>
                   <div class="tulisan">
                     <p class="judul-item">ILUSTRASI</p>
@@ -120,7 +129,11 @@
 
                 <div class="item web">
                   <div class="gambar">
-                    <img class="pict" src="./img/Dashboard.png" alt="" />
+                    <img
+                      class="pict"
+                      src="https://storage.googleapis.com/img-sharina/Dashboard.png"
+                      alt=""
+                    />
                   </div>
                   <div class="tulisan web">
                     <p class="judul-item">Web</p>
@@ -130,7 +143,11 @@
 
                 <div class="item ilustrasi">
                   <div class="gambar">
-                    <img class="pict" src="./img/flat-ilustasi.png" alt="" />
+                    <img
+                      class="pict"
+                      src="https://storage.googleapis.com/img-sharina/Dashboard.png"
+                      alt=""
+                    />
                   </div>
                   <div class="tulisan">
                     <p class="judul-item">ILUSTRASI</p>
@@ -139,7 +156,11 @@
                 </div>
                 <div class="item web">
                   <div class="gambar">
-                    <img class="pict" src="./img/todo.jpeg" alt="" />
+                    <img
+                      class="pict"
+                      src="https://storage.googleapis.com/img-sharina/todo.jpeg"
+                      alt=""
+                    />
                   </div>
                   <div class="tulisan">
                     <p class="judul-item">Web</p>
