sudah melakukan perubahan codingan

--- a/www/index.html
+++ b/www/index.html
@@ -103,9 +103,11 @@
               <div class="p-bawah">
                 <div class="item ui">
                   <div class="gambar">
-                    <img class="pict"
-                    src="https://storage.googleapis.com/img-sharina/Dashboard.png"
-                    alt=""
+                    <img
+                      class="pict"
+                      src="https://storage.googleapis.com/img-sharina/Dashboard.png"
+                      alt=""
+                    />
                   </div>
                   <div class="tulisan">
                     <p class="judul-item">UI UX</p>
@@ -145,7 +147,7 @@
                   <div class="gambar">
                     <img
                       class="pict"
-                      src="https://storage.googleapis.com/img-sharina/Dashboard.png"
+                      src="https://storage.googleapis.com/img-sharina/flat-ilustasi.png"
                       alt=""
                     />
                   </div>
